--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,7 +57,7 @@
     "@types/react-router-dom": "5.3.3",
     "@typescript-eslint/eslint-plugin": "6.7.0",
     "@typescript-eslint/parser": "6.7.0",
-    "@vitejs/plugin-basic-ssl": "1.0.1",
+    "@vitejs/plugin-basic-ssl": "^1.2.0",
     "@vitejs/plugin-react": "4.1.0",
     "autoprefixer": "10.4.16",
     "eslint": "8.50.0",
