fix: Lock MultiversX SDK versions to exact versions

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,10 +26,10 @@
     "@fortawesome/free-regular-svg-icons": "6.5.1",
     "@fortawesome/free-solid-svg-icons": "6.5.1",
     "@fortawesome/react-fontawesome": "0.2.0",
-    "@multiversx/sdk-core": "^15.x",
-    "@multiversx/sdk-dapp": "^5.x",
-    "@multiversx/sdk-dapp-ui": "^0.x",
-    "@multiversx/sdk-dapp-utils": "^3.x",
+    "@multiversx/sdk-core": "15.1.2",
+    "@multiversx/sdk-dapp": "5.3.2",
+    "@multiversx/sdk-dapp-ui": "0.1.10",
+    "@multiversx/sdk-dapp-utils": "3.0.3",
     "@multiversx/sdk-network-providers": "^2.9.3",
     "axios": "1.10.0",
     "bignumber.js": "^9.x",
