--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "classnames": "2.3.2",
     "i18next": "^25.6.2",
     "moment": "2.29.4",
+    "protobufjs": "^7.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.6.0",
